# Biometric-Attendance

./: .gitignore  README.md  main.py  requirements.txt  setup.cfg
config/: .env  mydb.sqlite
src/backend/: add_Admin_service.py  adding_admin_service.py  adding_employee_service.py  admin_table_service.py  change_wifi_service.py  employee_table_service.py  forgot_password_service.py  login_service.py  records_function.py  save_function.py  time_in.py  time_out.py
src/frontend/: Time_in_ui.py  Time_out_ui.py  add_Admin_gui.py  adding_admin_gui.py  adding_employee_gui.py  admin_gui.py  admin_panel.py  admin_table.py  attendance_record.py  change_wifi_gui.py  date_records.py  employee_table.py  forgot_passwrod_gui.py  login_gui.py  time_set.py
src/script/backend/: login_service.py
src/script/frontend/: login_gui.py
