[metadata]
name = mypackage
version = 0.0.1

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]  # (always `find` even if `find_namespace:` was used before)
# This section is optional as well as each of the following options:
where=src  # . by default
